--- a/7.5__js_dataType/Step01_dataType4.html
+++ b/7.5__js_dataType/Step01_dataType4.html
@@ -10,8 +10,12 @@
 <body>
     <h1>javascript data type4</h1>
     <script>
-        //상품 하나의 정보라고 가정
-        //순서가 중요하지 않은 데이터는 object type에 담으면 된다
+        /*
+            상품 하나의 정보라고 가정
+            순서가 중요하지 않은 데이터는 object type에 담으면 된다
+            one product information
+            put in object type if data does not have to be ordered
+        */
         let obj={num:1, name:"삼겹살", price:"10,000원"};
         let obj2={name:"삼겹살", num:1, price:"10,000원"};
 
@@ -25,12 +29,18 @@
                 삼겹살
         */
        let foods=["냉면", "냉모밀", "갈비탕","돼지국밥","삼겹살"];
-            //순서가 중요한 데이터는 array type에 담는다 []를 사용
-            //데이터를 ,로 구분해 나열하면 된다. key값이 없음
-            //index가 자동으로 붙음 ****0부터 시작*****
-            //(0,1,2,3,4)
+            /*
+                순서가 중요한 데이터는 array type에 담는다 []를 사용
+                데이터를 ,로 구분해 나열하면 된다. key값이 없음
+                index가 자동으로 붙음 ****0부터 시작*****
+                (0,1,2,3,4)
+                if data needs to be ordered put it in array type 
+                use [] and divide using "," 
+                there is no key value auto indexing 
+                starts from 0
+            */
 
-            //배열의 특정 인덱스에 저장됨 item을 변수에 담기
+        //배열의 특정 인덱스에 저장된 item을 변수에 담기
         let a=foods[0];
         let b=foods[1];
 
@@ -39,6 +49,7 @@
         foods[1]="짬뽕";
 
         //기호.을 사용할 수 있다
+        // able to use "."
         
         //배열의 크기 참조해서 변수에 담기
         let size=foods.length;
