--- a/7.4__js_dataType/Step01_dataType02.html
+++ b/7.4__js_dataType/Step01_dataType02.html
@@ -12,7 +12,7 @@
 <body>
     <h1>javascript data type2</h1>
     <script>
-        //참과 거짓을 나타낼 때 사용하는 blean type
+        //참과 거짓을 나타낼 때 사용하는 boolean type
         //boolean type 데이터가 들어가는 변수의 이름을 대화식으로 지으면 
         //가독성이 좋다 (isXXX, canXXX)
         /*
