--- a/7.5__js_dataType/Step01_dataType03.html
+++ b/7.5__js_dataType/Step01_dataType03.html
@@ -46,11 +46,13 @@
         let d=mem1.isMale;
 
         //object에 저장된 값을 수정해 보기
+        //edit value im object
         mem2.num2;
         mem2.name="Yuki";
         mem2.isMale=false;
 
         // 빈 object 를 만들고 나중에 필요에 따라 방을 추가할 수 있다
+        // make empty object first add data later
         let mem5={};
         mem5.num=3;
         mem5.name="Dubu";
